     during other team's turns
   * improve the tiny gui support (resolution of 320x240 pixels)
   * when sighting friendly units, the message is now blue
   * show leader name in statistics title (patch #604, FR #6932)
   * initial support for GP2X controls
   * show leader's name and colour at status table even when that team is fogged
     (patch #605)
 * WML engine
   * added a 'hide_help' key that prevents a unit type from being listed in the
     in-game help
   * added an 'allow_new_game' key (default=yes) to prevent [multiplayer]
     scenarios from showing up in the multiplayer game creation interface
     (FR #6397)
   * new [set_specials] tag to allow custom specials in [effect] tags
   * new 'remove_specials' key to allow to removal of specials in [effect] tags
   * obsolete the 'set_special' key in [effect] tags
   * correct handling of UTF8 filenames under windows
   * animations can now use standard unit filters
   * animations can now use standard unit filters on the secondary unit
   * fighting animations can now be filtered by swing number, damage done and
     normal attack filters (both attacker and defender)
   * made some animation parameters progressive (allows a value to be changed
     gradually to another value over time)
   * new progressive parameters: 'alpha' (opacity of a frame), 'offset' (the
     position relative to the faced hex), 'blend_color' and 'blend_ratio' (to
     mix a given color with the frame)
   * units can now have a recruit animations that will be played on unit recruit
   * units now have idle animations, played when they've been idle for some time
   * units now have leveling up animations
   * [event]s can now be written also inside [era]s (the [event]s are included
     in every scenario played using that era)
 * multiplayer game management
   * client now tells the server if a game ended in victory or defeat
   * configurable castle size for random map generator (patch #598, FR #3232)
 * multiplayer scenarios