@@ -1,25 +1,46 @@
+#testing terrain rotation probability
+[terrain]
+symbol_image=castle
+id=castle
+name= _ "Castle"
+char=y
+aliasof=W
+[/terrain]
+
+{FORESTADJ y g 33 mountains}
+{FORESTADJ y g 50 forest}
+{FORESTADJ y g 100 reed1-small}
+
+
+#{SHEX y overlay 50 mountains}
+#{SHEX y overlay 100 forest}
+
 [test]
 	name="Test scenario"
+
+
+
 	map_data="mmmmggggggggggggggggggggggggggggggggg
 mmmmggggggggggggggggggggggggggggggggg
 mgggggCCCCggggggggggggggggggggggggggg
 mgggggC1Cgggggggggfffffgggggggggggggg
 mgggggCCCgggggggggfffffgggccccggggggg
 mgggggCCCgggggggggfffffgggcchhggggggg
-mgggggtgtgggggggggggggggggccccggggggg
-ggggggggggggggggggggggggggggggggggggg
-ggggggggggggggggggggggggggggggggggggg
-ggggggggggggggggggggggggggggggggggggg
-gggggggggggggggggggggCCCggggggggggggg
-gggggggggggggggggggggCCCggggggggggggg
-ggggggggggggggggggggggggggggggggggggg
-ggnnKnggggggggggggggggggggggggggggggg
-gggnngggggggggggggggggggggggggggggggg
-gggggggggggggggggggggggggggg2gggggggg
-gggggggDgggggtggggggggggggggggggggggg
-ggggggDgggtgggggggggggggggggggggggggg
-ggggggggggggggggggggggggggggggggggggg
+mgggggtgtgggggggggggggggggccccygggygg
+ggggggggggggggggggggggggggggggggygggg
+ggggggggggggggggggggggggggggggygggygg
+ggggggggggggggggggggggggggggggggygggg
+gggggggggggggggggggggCCCggggggygggygg
+gggggggggggggggggggggCCCggggggggygggg
+ggggggggggggggggggggggggggggggygggygg
+ggnnKnggggggggggggggggggggggggggygggg
+gggnngggggggggggggggggggggggggygggygg
+gggggggggggggggggggggggggggg2gggygggg
+gggggggDgggggtggggggggggggggggygggygg
+ggggggDgggtgggggggggggggggggggggygggg
+ggggggggggggggggggggggggggggggygggygg
 "
+
 
 [event]
 name=moveto
