@@ -32,6 +32,7 @@ Version 1.3-svn:
    * show leader's name and colour at status table even when that team is fogged
      (patch #605)
  * WML engine
+   * fixed terrain probabilities for terrains defined with rotations (bug #7274)
    * added a 'hide_help' key that prevents a unit type from being listed in the
      in-game help
    * added an 'allow_new_game' key (default=yes) to prevent [multiplayer]
